--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <textarea class="text-area" cols="45" rows="7" id="quoteInput"></textarea>
         </div>
         <div>
-            <p id="result" class="pl-3 pt-2"></p>
+            <p id="result" class="result-para pl-3 pt-2"></p>
             <div class="d-flex flex-row pl-3 pt-3">
                 <button class="btn btn-primary" id="submitBtn">Submit</button>
                 <button class="btn_1 btn-primary ml-3 p-2" id="resetBtn">Reset</button>
